@@ -11,6 +11,6 @@ TODO/BUGS before releasing 2.0.0pre1:
 
 * delinking/relinking of non-irc windows
 
-* Changing tabs via keyboard is buggy
-
 * Key bindings for menu bar?
+
+* Dialog tinted-transparency on right-side is broken
