@@ -9,6 +9,8 @@
  - Added /GETSTR and /GETINT.
  - Misc. serverlist bug fixes (Shaun Guth).
  - Added xchat_get_info("network") to plugin interface.
+ - Fixed changing tabs via keyboard.
+ - 
  - 
  - 
 
